# binary_format

./: .gitignore
c/: CMakeLists.txt
c/binary_format/: binf.c  binf.h  binf.hpp  binff.c  binff.f90
c/example/: main.c  main.cpp
data/: x010_data_c_uni.binf  x010_data_c_zip.binf.xz  x010_data_cpp_std.binf  x010_data_cpp_zip.binf.xz  x010_data_f_std.binf  x010_data_f_zip.binf
fortran/: CMakeLists.txt  binary_format
fortran/example/: main.f90
python/: setup.cfg
python/examples/: x010.py  x020.py
